--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT([coredoc], [0.1], [webmaster@interfiber.dev])
+AC_INIT([coredoc], [0.1], [webmaster@interfiber.dev], [coredoc], [https://github.com/Interfiber/coredoc])
 
 AM_INIT_AUTOMAKE
 AC_PROG_CC
